--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,9 @@
---- 
-- 
-  become: true
-  hosts: all
-  name: "nginx install and start service"
-  tasks: 
-    - 
-      name: "install nginx"
-      yum: 
-        name: nginx
-        state: latest
-    - 
-      name: "start nginx"
-      service: 
-        name: nginx
-        state: started
+---
+- hosts: all
+  tasks:
+    - name: ensure nginx is at the latest version
+      apt: name=nginx state=latest
+    - name: start nginx
+      service:
+          name: nginx
+          state: started
