--- a/playbook.yml
+++ b/playbook.yml
@@ -6,9 +6,9 @@
     tasks:
       - name: ensure apache is at the latest version
         yum:
-          name: httpd
+          name: nginx
           state: latest
       - name: ensure apache is running
         service:
-          name: httpd
-          state: started         
+          name: nginx
+          state: started  
