--- a/playbook.yml
+++ b/playbook.yml
@@ -6,9 +6,9 @@
     tasks:
       - name: ensure apache is at the latest version
         yum:
-          name: nginx
+          name: httpd
           state: latest
       - name: ensure apache is running
         service:
-          name: nginx
-          state: started  
+          name: httpd
+          state: aborted  
